--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,5 +10,5 @@ jobs:
         python-version: '3.11.1'
     - name: test
       run: |
-        python main.py -g all
+        cd src/HW1; python main.py -g all
     - run: echo "🍏 This job's status is ${{ job.status }}."
