--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,10 +8,10 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.11.1'
-    - name: test
+    - name: HW 1 Test
       run: |
         cd src/HW1; python main.py -g all
-    - name: test
+    - name: HW 2 Test
       run: |
         python src/HW2/main.py -g all -f etc/data/auto93.csv
     - run: echo "🍏 This job's status is ${{ job.status }}."
