--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,4 +14,7 @@ jobs:
     - name: HW 2 Test
       run: |
         python src/HW2/main.py -g all -f etc/data/auto93.csv
+    - name: HW 3 Test
+      run: |
+        python src/HW3/main.py -g all -f etc/data/auto93.csv
     - run: echo "🍏 This job's status is ${{ job.status }}."
