Updated GitHub Workflows for HW5

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,4 +20,7 @@ jobs:
     - name: HW 4 Test
       run: |
         python src/HW4/main.py -g all -f etc/data/repgrid1.csv
+    - name: HW 5 Test
+      run: |
+        python src/HW5/main.py -g all -f etc/data/auto93.csv
     - run: echo "🍏 This job's status is ${{ job.status }}."
