Add HW 7 GitHub Workflow Tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,7 @@ jobs:
     - name: HW 6 Test
       run: |
         python src/HW6/main.py -g all -f etc/data/auto93.csv
+    - name: HW 7 Test
+      run: |
+        python src/HW7/main.py -g all -f etc/data/auto93.csv
     - run: echo "🍏 This job's status is ${{ job.status }}."
