--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,10 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.11.1'
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install numpy
     - name: HW 1 Test
       run: |
         cd src/HW1; python main.py -g all
