--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,5 +32,5 @@ jobs:
         python src/HW6/main.py -g all -f etc/data/auto93.csv
     - name: HW 7 Test
       run: |
-        python src/HW7/main.py -f etc/data/auto93.csv
+        python src/HW7/main.py
     - run: echo "🍏 This job's status is ${{ job.status }}."
